ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dice-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dice-app
            port:
              number: 8080
